[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/fonts/times.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/VoteHoster.gd" type="Script" id=3]
[ext_resource path="res://objects/VotePage.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/icons/fullscreen.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[node name="VoteHoster" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
vote_page_scene = ExtResource( 4 )

[node name="KeepAliveTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="HosterVBox" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="IntroContainer" type="VBoxContainer" parent="HosterVBox"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VoteNameLabel" type="Label" parent="HosterVBox/IntroContainer"]
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Vote Name"
align = 1
valign = 2
autowrap = true

[node name="IntroInfoContainer" type="HBoxContainer" parent="HosterVBox/IntroContainer"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VoteCodeLabel" type="Label" parent="HosterVBox/IntroContainer/IntroInfoContainer"]
margin_right = 338.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Vote code
loading..."
align = 1
valign = 1

[node name="StartVoteButton" type="Button" parent="HosterVBox/IntroContainer/IntroInfoContainer"]
margin_left = 411.0
margin_top = 119.0
margin_right = 611.0
margin_bottom = 179.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Start Vote"

[node name="ClientCountLabel" type="Label" parent="HosterVBox/IntroContainer/IntroInfoContainer"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Connected clients: 0"
align = 1
valign = 1
autowrap = true

[node name="VotePages" type="Control" parent="HosterVBox"]
visible = false
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VotingInfoVBox" type="HBoxContainer" parent="HosterVBox"]
visible = false
margin_top = 540.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="VotingInfoLabel" type="Label" parent="HosterVBox/VotingInfoVBox"]
margin_right = 750.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Voting..."
valign = 1

[node name="FinishVoteButton" type="Button" parent="HosterVBox/VotingInfoVBox"]
margin_left = 754.0
margin_right = 1024.0
margin_bottom = 60.0
text = "Finish Voting"

[node name="RetryVoteButton" type="Button" parent="HosterVBox/VotingInfoVBox"]
visible = false
margin_left = 645.0
margin_right = 1024.0
margin_bottom = 60.0
text = "Retry Starting Vote"

[node name="NextPageButton" type="Button" parent="HosterVBox/VotingInfoVBox"]
visible = false
margin_left = 814.0
margin_right = 1024.0
margin_bottom = 60.0
text = "Next Page"

[node name="ResultsTabContainer" type="TabContainer" parent="HosterVBox"]
visible = false
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FullscreenButton" type="Button" parent="."]
margin_top = 70.0
margin_right = 76.0
margin_bottom = 140.0
icon = ExtResource( 5 )

[node name="ExitButton" type="Button" parent="."]
margin_right = 91.0
margin_bottom = 70.0
text = "Exit"

[node name="CodeLabel" type="Label" parent="."]
margin_left = 91.0
margin_right = 178.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "CODE"

[node name="PopupError" type="AcceptDialog" parent="."]
margin_left = 305.0
margin_top = 218.0
margin_right = 686.0
margin_bottom = 380.0
window_title = "Server error!"
dialog_text = "Error"
dialog_autowrap = true

[node name="ExitPopup" type="ConfirmationDialog" parent="."]
margin_left = 283.0
margin_top = 213.0
margin_right = 698.0
margin_bottom = 390.0
window_title = "Are you sure?"
dialog_text = "Stop the vote and exit?"

[connection signal="timeout" from="KeepAliveTimer" to="." method="_on_KeepAliveTimer_timeout"]
[connection signal="pressed" from="HosterVBox/IntroContainer/IntroInfoContainer/StartVoteButton" to="." method="_on_StartVoteButton_pressed"]
[connection signal="pressed" from="HosterVBox/VotingInfoVBox/FinishVoteButton" to="." method="_on_FinishVoteButton_pressed"]
[connection signal="pressed" from="HosterVBox/VotingInfoVBox/RetryVoteButton" to="." method="_on_finished_presenting"]
[connection signal="pressed" from="HosterVBox/VotingInfoVBox/NextPageButton" to="." method="_on_NextPageButton_pressed"]
[connection signal="pressed" from="FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="confirmed" from="ExitPopup" to="." method="_on_ExitPopup_confirmed"]
